--- a/motion_blur/libs/configs/config_motionnet.yml
+++ b/motion_blur/libs/configs/config_motionnet.yml
@@ -1,9 +1,12 @@
 TRAIN:
-    DATASET_PATH: 'imgs/lena.tiff'
-    SAVE_PATH: 'training_results'
-    N_EPOCH: 600
-    LR: 0.001
+    TRAIN_DATASET_PATH: 'imgs/lena.tiff'
+    SAVE_PATH: 'training_results/3'
+    N_EPOCH: 5700
+    LR: 0.0001
     L_max : 20
     L_min : 3
+    LOSS_PERIOD: 50
+    MINI_BATCH_SIZE: 4
 TEST:
-    DATASET_PATH: 'imgs/lena.tiff'
+    TEST_DATASET_PATH: 'imgs/lena.tiff'
+    WEIGHT_PATH: 'models'
