--- a/motion_blur/libs/configs/config_reds_1_img.yml
+++ b/motion_blur/libs/configs/config_reds_1_img.yml
@@ -1,11 +1,15 @@
+NET:
+    N_LAYERS: 4
+    N_SUBLAYERS: 2
+    N_FEATURES_FIRST_LAYER: 16
 TRAIN:
     TRAIN_DATASET_PATH: 'datasets/reds_small'
     SAVE_PATH: 'training_results/reds_small/run5'
     SMALL_DATASET: 1
     N_EPOCH: 35000
-    LR: 0.0001
+    LR: 0.00001
     L_max : 10
-    L_min : 2
+    L_min : 0
     LOSS_PERIOD: 12
     MINI_BATCH_SIZE: 8
     SAVING_EPOCH: 2000
@@ -16,7 +20,7 @@ VALIDATION:
     BLURRED_VAL_DATASET_PATH: ~
     VAL_SMALL_DATASET_PATH: "datasets/reds_small/000_00000000.png"
     VAL_N_ANGLES: 60
-    VAL_N_LENGTHS: 20
+    VAL_N_LENGTHS: 10
 TEST:
     TEST_DATASET_PATH: 'datasets/reds/val_blurred'
     WEIGHT_PATH: 'models'
