Added optional checkpoint

--- a/motion_blur/libs/configs/config_reds_1_img.yml
+++ b/motion_blur/libs/configs/config_reds_1_img.yml
@@ -14,6 +14,7 @@ TRAIN:
     LOSS_PERIOD: 10
     MINI_BATCH_SIZE: 4
     SAVING_EPOCH: 100000
+    LOAD_CHECKPOINT: 1
 VALIDATION:
     USE_VALIDATION: 1
     VALIDATION_PERIOD: 100
