--- a/tests/test_data/configs/mock_config_classification.yml
+++ b/tests/test_data/configs/mock_config_classification.yml
@@ -1,29 +1,30 @@
 NET:
-    N_LAYERS: 5
-    N_SUBLAYERS: 2
-    N_FEATURES_FIRST_LAYER: 32
+    N_LAYERS: 2
+    N_SUBLAYERS: 1
+    N_FEATURES_FIRST_LAYER: 1
     AS_GRAY : 0
     REGRESSION: 0
 TRAIN:
-    TRAIN_DATASET_PATH: 'datasets/reds_small'
-    SAVE_PATH: 'training_results/reds_small/run5'
+    TRAIN_DATASET_PATH: 'tests/test_data/test_img/'
+    SAVE_PATH: 'tests/test_data/tmp'
     SMALL_DATASET: 1
-    N_EPOCH: 10000
+    N_EPOCH: 2
     LR: 0.001
-    L_max : 11
-    L_min : 11
-    n_angles: 180
-    LOSS_PERIOD: 10
-    MINI_BATCH_SIZE: 4
-    SAVING_EPOCH: 100000
+    L_max : 5
+    L_min : 5
+    n_angles: 2
+    n_lengths : 1
+    LOSS_PERIOD: 1
+    MINI_BATCH_SIZE: 1
+    SAVING_EPOCH: 2
     LOAD_CHECKPOINT: 1
 VALIDATION:
     USE_VALIDATION: 1
     VALIDATION_PERIOD: 100
     SHARP_VAL_DATASET_PATH: ~
     BLURRED_VAL_DATASET_PATH: ~
-    VAL_SMALL_DATASET_PATH: "datasets/reds_small/000_00000000.png"
-    VAL_N_ANGLES: 60
+    VAL_SMALL_DATASET_PATH: 'tests/test_data/test_img/lena.jpeg'
+    VAL_N_ANGLES: 1
 TEST:
     TEST_DATASET_PATH: 'datasets/reds/val_blurred'
     WEIGHT_PATH: 'models'
